Fix footer positioning in IE11; Allow footer nav to wrap

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -56,6 +56,7 @@ body {
 
     // Desktop
     @media (min-width: $mobile-break) {
+        display: block;
         height: 100%;
         padding: 0 0 0 $nav-width;
 
@@ -77,7 +78,7 @@ body {
     // Desktop
     @media (min-width: $mobile-break) {
         margin-top: 0;
-        min-height: 100%;
+        height: 100%;
     }
 }
 
@@ -175,6 +176,8 @@ header {
     position: relative;
     background-color: $content-background-color;
     color: $content-color;
+    // fixes footer positioning for IE 11
+    flex: 1 0 auto;
 
     h3:not(:first-child):before {
         content: "";
